Slightly fixed alignment. Add button not.

--- a/ProblemFinder/static/problemfinder/css/custom.css
+++ b/ProblemFinder/static/problemfinder/css/custom.css
@@ -10,6 +10,9 @@
 .dropdown{
     display: inline-block;
     float: left;
-
+    padding-right: 5px;
 }
 
+.btn-primary{
+    padding-top: 500px;
+}
